--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
+    "nanoid": "^3.3.4",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
