--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
