--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.51.0",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
