--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
+    "moment": "^2.29.3",
     "nanoid": "^3.3.4",
     "node-sass": "^7.0.1",
+    "numeral": "^2.0.6",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
